fix: antd style reqiure inneed and fix dark mode style

--- a/src/pages/tools/index.module.scss
+++ b/src/pages/tools/index.module.scss
@@ -1,3 +1,17 @@
+body {
+  background-color: transparent !important;
+  color: var(--ifm-heading-color) !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--ifm-heading-color) !important;
+}
+
 .tool-wrap {
   ul,
   li {
